--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,5 @@
       "@shared/*": ["./shared/*"]
     }
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "src/types"]
 }
