--- a/package.json
+++ b/package.json
@@ -50,6 +50,12 @@
     "vite-plugin-electron": "^0.28.8",
     "vite-plugin-electron-renderer": "^0.14.6"
   },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "electron",
+      "node-pty"
+    ]
+  },
   "build": {
     "appId": "com.aiterminal.app",
     "productName": "AI Terminal",
