--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "electron:build": "tsc && vite build",
     "electron:package": "electron-builder",
     "lint": "eslint src electron shared --ext .ts,.tsx",
-    "lint:fix": "eslint src electron shared --ext .ts,.tsx --fix"
+    "lint:fix": "eslint src electron shared --ext .ts,.tsx --fix",
+    "rebuild": "electron-builder install-app-deps",
+    "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [
     "terminal",
