feat: 🎸 加入了打包命令

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "AI-powered terminal with natural language command interface",
   "main": "dist-electron/main.js",
+  "author": "szh19970123@icloud.com",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
+    "build:win": "tsc && vite build && electron-builder --win --x64",
+    "build:mac": "tsc && vite build && electron-builder --mac",
     "preview": "vite preview",
     "electron:dev": "vite",
     "electron:build": "tsc && vite build",
