chore: 🤖 优化了打包配置命令

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "author": "szh19970123@icloud.com",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && electron-builder",
-    "build:win": "tsc && vite build && electron-builder --win --x64",
-    "build:mac": "tsc && vite build && electron-builder --mac",
+    "build": "tsc && vite build && electron-builder && pnpm cleanup",
+    "build:win": "tsc && vite build && electron-builder --win --x64 && pnpm cleanup",
+    "build:mac": "tsc && vite build && electron-builder --mac && pnpm cleanup",
+    "build:linux": "tsc && vite build && electron-builder --linux && pnpm cleanup",
+    "cleanup": "rm -rf dist dist-electron",
     "preview": "vite preview",
     "electron:dev": "vite",
     "electron:build": "tsc && vite build",
