fix: 🐛 修复了一些错误并且把相对导入路径换为绝对路径

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,7 +10,8 @@
     "lib": ["ES2020"],
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "types": ["node"]
   },
   "include": ["electron", "shared"]
 }
