--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ai-terminal",
-  "version": "1.5.2",
+  "version": "0.6.0",
   "description": "AI-powered terminal with natural language command interface",
   "main": "dist-electron/main.js",
   "author": "szh19970123@icloud.com",
@@ -57,6 +57,8 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "less": "^4.5.1",
+    "rollup-plugin-visualizer": "^6.0.5",
+    "terser": "^5.46.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.7",
     "vite-plugin-electron": "^0.28.8",
@@ -76,7 +78,25 @@
     },
     "files": [
       "dist/**/*",
-      "dist-electron/**/*"
+      "dist-electron/**/*",
+      "!node_modules/**/*.{md,txt}",
+      "!node_modules/**/*.map",
+      "!node_modules/**/test*/**",
+      "!node_modules/**/__tests__/**",
+      "!node_modules/**/docs/**"
+    ],
+    "asar": {
+      "smartUnpack": true
+    },
+    "compression": "maximum",
+    "extraResources": [
+      {
+        "from": "node_modules/node-pty",
+        "to": "node-pty",
+        "filter": [
+          "**/*"
+        ]
+      }
     ],
     "mac": {
       "identity": null,
